# Velux

./: .gitignore  CMakeLists.txt  LICENSE  Package.resolved  Package.swift  README.md
.swiftpm/xcode/package.xcworkspace/xcuserdata/tristanshaw.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/tristanshaw.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/Velux/: BuildSystem.swift  Colors.swift  Models.swift  PklModels.swift  Velux.swift
Sources/Velux/BuildSystem/: BuildSystem.swift  ErrorBuild.swift  SupportC.swift  SupportCC.swift  SupportJava.swift
Sources/Velux/Utils/: VeluxUtils.swift
demo/: main.cpp  velux.json
demo/dep_demo/: lib.cpp  lib.h  velux.json
demo/dep_demo/.velux-cache/: .ninja_deps  .ninja_log
example/: CMakeLists.txt  README.md  build.pkl  workspace.pkl
example/C/: build.pkl  workspace.pkl
example/C/src/app/: app.pkl  main.c
example/C/src/core/: core.pkl
example/C/tests/: test_core.c  tests.pkl
example/Java/: build.pkl  workspace.pkl
example/Java/src/java/main/: main.pkl
example/src/app/: app.pkl
example/src/core/: core.c  core.h  core.pkl
example/tests/: tests.pkl
example/velux-out/executable/: app  tests
include/: argparse.hpp  build_system.hpp  configparse.h  logger.hpp  sys.hpp
pkl/: BuildConfig.pkl
src/: argparse.cpp  build_system.cpp  configparse.cpp  logger.cpp  main.cpp
src/sys/: fs.cpp  safe_system.cpp
